# ninja-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bh/: core.py
src/constants/: units.py
src/halo/: assign.py
src/io/: load_fits.py
src/process/: accretion.py
src/stats/: qso_merger_fraction.py
src/utils/: threading.py  threading.py:Zone.Identifier
